cabal-version: 2.4
name:          aoc2024
version:       0.1.0.0
maintainer:    love.lyckaro@hotmail.se
author:        Love Lyckaro
bug-reports:   https://github.com/lovelyckaro/aoc2024/issues
synopsis:      Loves solutions for advent of code 2024

library
    exposed-modules:
        SantaLib
        SantaLib.Service
        SantaLib.Parsing
        Solutions

    hs-source-dirs:     lib
    other-modules:
        Solutions.Day01
        Solutions.Day02
        Solutions.Day03
        Solutions.Day04
        Solutions.Day05
        Solutions.Day06
        Solutions.Day07
        Solutions.Day08
        Solutions.Day09
        Solutions.Day10
        Solutions.Day11
        Solutions.Day12
        Solutions.Day13
        Solutions.Day14
        Solutions.Day15
        Solutions.Day16
        Solutions.Day17
        Solutions.Day18
        Solutions.Day19
        Solutions.Day20
        Solutions.Day21
        Solutions.Day22
        Solutions.Day23
        Solutions.Day24
        Solutions.Day25

    default-language:   GHC2024
    default-extensions: RecordWildCards
    ghc-options:        -interactive-print Text.Pretty.Simple.pPrint
    build-depends:
        base >=4.20,
        advent-of-code-api >=0.2.8.0,
        containers,
        text >=2.1.2,
        tagsoup,
        vector,
        megaparsec,
        replace-megaparsec,
        pretty-simple,
        pandoc,
        servant,
        aeson,
        array,
        mtl,
        ansi-terminal,
        sbv,
        search-algorithms,
        fgl

executable aoc
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -interactive-print Text.Pretty.Simple.pPrint
    build-depends:
        base >=4.20,
        aoc2024,
        dotenv,
        optparse-applicative,
        pretty-simple,
        text,
        servant,
        servant-server,
        warp
